@@ -18,11 +18,17 @@ int main()
 	PosixSerial ps("/dev/scribbler9");
 	Scribbler scribbler(ps);
 
+/*
 	cerr << "drive: " << scribbler.drive(100,100,1) << endl;
 	cerr << "beep: " << scribbler.beep(1,5) << endl;
 	cerr << "led: " << scribbler.setScribblerAllLeds(1) << endl;
+*/
 
-
+	if (scribbler.getScribblerName(buffer) == 0) {
+		cerr << "failed to get name" << endl;
+	} else {
+		cout << buffer << endl;
+	}
 
 	return 0;
 }
